# Propel

./: .env.example  LICENSE  PLATFORM_OVERVIEW.md  README.MD  SUPABASE_MIGRATION.sql  eslint.config.js  index.html  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
@linera/client/: package.json
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/api/linera-balance/: route.ts
app/api/proxy-image/: route.ts
app/explorer/: page.tsx
app/profile/: page.tsx
app/projects/[id]/: page.tsx
app/submit/: page.tsx
components/: about-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  navbar.tsx  project-detail.tsx  projects-section.tsx  roles-section.tsx
components/ui/: progress.tsx
contracts/: Cargo.toml  rust-toolchain.toml
contracts/wallet/: Cargo.toml
contracts/wallet/src/: contract.rs  lib.rs  service.rs  state.rs
lib/: linera-client.ts  linera-loader.ts  supabase.ts
public/: _headers
src/: App.tsx  index.css  main.tsx
src/components/: CommentsSection.tsx  Footer.tsx  Header.tsx  LineraWalletPanel.tsx  MilestoneTracker.tsx  PredictionModule.tsx  ProjectCard.tsx  ThemeToggle.tsx  VerdictModule.tsx  WalletCard.tsx
src/contexts/: ThemeContext.tsx
src/lib/: linera.ts  supabase.ts
src/pages/: CreateProjectPage.tsx  DashboardPage.tsx  ExploreMarketsPage.tsx  LandingPage.tsx  ProfilePage.tsx  ProjectDetailsPage.tsx  SettingsPage.tsx
