[package]
name = "wallet-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []

[dependencies]
async-graphql.workspace = true
fungible.workspace = true
linera-sdk.workspace = true
serde.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
wallet-bridge = { path = ".", features = ["test"] }
test-log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }

[[bin]]
name = "wallet_bridge_contract"
path = "src/contract.rs"

[[bin]]
name = "wallet_bridge_service"
path = "src/service.rs"